--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: flixster_development
+  database: flixter_development
   username: postgres
   password: password
   host: localhost
@@ -32,7 +32,7 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: flixster
+  #username: flixter
 
   # The password associated with the postgres role (username).
   #password:
@@ -60,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: flixster_test
+  database: flixter_test
   username: postgres
   password: password
   host: localhost
@@ -86,7 +86,7 @@ test:
 #
 production:
   <<: *default
-  database: flixster_production
+  database: flixter_production
   pool: 5
   username: postgres
   password: password
